--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -6,7 +6,7 @@
 % \iffalse
 %</internal>
 %<*internal|class|theme|palette|mscwg|msdwg>
-\def\Version{2015/06/10 v2.0}
+\def\Version{2016/08/17 v3.0-pre}
 %</internal|class|theme|palette|mscwg|msdwg>
 %<*internal>
 \iffalse
@@ -150,7 +150,7 @@ See:     http://www.latex-project.org/lppl.txt
 \endpreamble
 \postamble
 
-Copyright (C) 2015 Alex Ball <a.j.ball@bath.ac.uk>
+Copyright (C) 2016 Alex Ball <a.j.ball@bath.ac.uk>
 \endpostamble
 
 \usedir{tex/latex/rdaslides}
@@ -158,11 +158,7 @@ Copyright (C) 2015 Alex Ball <a.j.ball@bath.ac.uk>
   \file{rdaslides.cls}{\from{\jobname.dtx}{class}}
   \file{rdacolors.sty}{\from{\jobname.dtx}{palette}}
   \file{beamerthemeRDA.sty}{\from{\jobname.dtx}{theme}}
-}
-\generate{
   \file{rdamsdwg.sty}{\from{\jobname.dtx}{msdwg}}
-}
-\generate{
   \file{rdamscwg.sty}{\from{\jobname.dtx}{mscwg}}
 }
 %</install>
